# AudioRestorationVST

./: AGENTS.md  CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  package.json  setup-linux-icon.sh  setup-mac.sh  voorcodex.MD
.github/workflows/: Create_Release.yml  build.yml  release.yml
Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: OnnxDenoiser.cpp  OnnxDenoiser.h
Source/GUI/: ReaperLookAndFeel.h  SettingsComponent.cpp  SettingsComponent.h  SpectrogramDisplay.cpp  SpectrogramDisplay.h  StandaloneWindow.cpp  StandaloneWindow.h  TrackListView.cpp  TrackListView.h  UndoHistoryView.cpp  UndoHistoryView.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Resources/: LogoData.h  VRSLogoData.h
cmake/: CopyRuntimeDlls.cmake
models/: README.txt  rnnoise_48k.onnx  rnnoise_48k_olive_dml.onnx
tools/: download_rnnoise_onnx.ps1  install_vcpkg_mp3.ps1  olive_config.json  olive_optimize_onnx.ps1
